--- a/template/layouts/default.pug
+++ b/template/layouts/default.pug
@@ -29,6 +29,7 @@ html(lang="en")
             .main
                 block main
             //- end main content
+        block script
 
 
         
