--- a/template/mixins/form.pug
+++ b/template/mixins/form.pug
@@ -1,9 +1,9 @@
-mixin form-search
+mixin form-search(keyword)
     form(
         action ="#" 
         class  = "form form__search"
     )
-        input(type="text" placeholder="Search here..." class="")
+        input(type="text" placeholder="Tìm kiếm ở đây..." class="")
         button(type="submit" class="")
             i(class="fa-solid fa-magnifying-glass")
 
