--- a/template/product-edit.pug
+++ b/template/product-edit.pug
@@ -17,10 +17,24 @@ block main
         [
             "Dashboard",
             "Sản Phẩm",
-            "Thêm Mới Sản Phẩm"
+            "Chỉnh sửa Sản Phẩm"
         ]
         
-    +box-head-use-breadcrumb("THÊM MỚI SẢN PHẨM", breadcrumbArray)
+    +box-head-use-breadcrumb("CHỈNH SỬA SẢN PHẨM", breadcrumbArray)
+
+    -   
+        var record = 
+        {
+            title: "Phía sau nghi can x",
+            category:"Đang Cập Nhật",
+            img:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&s",
+            price:"1,452.500",
+            status:"active",
+            discountPercentage: 10,
+            stock: 50,
+            position: 1,
+            description: "“Việc nghĩ ra một bài toán vô cùng khó và việc giải bài toán đó, việc nào khó hơn?” Khi nhấn chuông cửa nhà nghi can chính của một vụ án mới, điều tra viên Kusanagi không biết rằng anh sắp phải đương đầu với một thiên tài ẩn dật. Kusanagi càng không thể ngờ rằng, chỉ một câu nói vô thưởng vô phạt của anh đã kéo người bạn thân, Manabu Yukawa, một phó giáo sư vật lý tài năng, vào vụ án. Và điều làm sững sờ nhất, đó là vụ án kia chẳng qua cũng chỉ như một bài toán cấp ba đơn giản, tuy nhiên ấn số X khi được phơi bày ra lại không đem đến hạnh phúc cho bất cứ ai… Với một giọng văn tỉnh táo và dung dị, Higashino Keigo đã đem đến cho độc giả hơn cả một cuốn tiểu thuyết trinh thám. Mô tả tội ác không phải điều hấp dẫn nhất ở đây, mà còn là những giằng xé nội tâm thầm kín, những nhân vật bình dị, và sự quan tâm sâu sa tới con người. Tác phẩm đã đem lại cho Higashino Keigo Giải Naoki lần thứ 134, một giải thưởng văn học lâu đời sánh ngang giải Akutagawa tại Nhật."
+        }
 
     //- card
     div(class="card")
@@ -28,6 +42,7 @@ block main
             form(
                 action="#"
                 class="form form__create"
+                method=""
             )   
                 //- left
                 div(class="form__left")
@@ -36,6 +51,7 @@ block main
                         input(
                             type="text"
                             placeholder="Nhập Tên Của Sản Phẩm"
+                            value = record.title
                         )
                         //- label() Không được nhập tên sản phẩm quá 20 ký tự.
 
@@ -52,30 +68,35 @@ block main
                             name=""
                             rows="5"
                             placeholder="Mô Tả Sản Phẩm Của Bạn..."
-                        )
+                        ) #{record.description}
+
                     div(class="form__item")
                         label(for="" class="label") Giá
                         input(
                             type="text"
                             placeholder="Nhập Giá Của Sản Phẩm"
+                            value = record.price
                         )
                     div(class="form__item")
                         label(for="" class="label") Giảm giá
                         input(
                             type="text"
                             placeholder="Nhập % Giảm Giá Của Sản Phẩm"
+                            value = record.discountPercentage
                         )
                     div(class="form__item")
                         label(for="" class="label") Số lượng
                         input(
                             type="text"
                             placeholder="Nhập Số Lượng Của Sản Phẩm"
+                            value = record.stock
                         )
                     div(class="form__item")
                         label(for="" class="label") Vị trí
                         input(
                             type="text"
                             placeholder="Nhập Vị Trí Của Sản Phẩm"
+                            value = record.position
                         )
                 //- right
                 div(class="form__right")
