--- a/template/mixins/form.pug
+++ b/template/mixins/form.pug
@@ -2,9 +2,19 @@ mixin form-search(keyword)
     form(
         action ="#" 
         class  = "form form__search"
+        method = "GET"  
+        form-search
     )
-        input(type="text" placeholder="Tìm kiếm ở đây..." class="")
-        button(type="submit" class="")
+        input(
+            type="text" 
+            placeholder="Tìm kiếm ở đây..." 
+            class=""
+            value=keyword 
+        )
+        button(
+            type="submit" 
+            class=""
+        )
             i(class="fa-solid fa-magnifying-glass")
 
 
