thay đổi trạng thái sản phẩm

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
   background-color: #0F172A;
 }
 
+.hidden {
+  display: none;
+}
+
 .header {
   background-color: #1E293A;
   padding: 15px 16px;
