--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,6 +11,11 @@ body {
     font-family: $font-main;
     background-color: #0F172A;
 }
+// base
+.hidden {
+    display: none;
+}
+// end base
 
 // header
 .header {
