--- a/partials/sider.html
+++ b/partials/sider.html
@@ -4,22 +4,53 @@
     <div class="sider__menu">
       <div class="sider__menu-title">MAIN HOME </div>
       <ul>
-        <li> <a href="#"><i class="fa-brands fa-windows"></i>  Dashboard</a></li>
+        <li sider__menu-item="sider__menu-item"><a href="javascript:;"><i class="fa-brands fa-windows"></i>  Dashboard</a></li>
       </ul>
     </div>
     <div class="sider__menu">
       <div class="sider__menu-title">ALL PAGE </div>
       <ul> 
-        <li><a class="true" href="#"><i class="fa-solid fa-cart-shopping"></i>  Sản Phẩm</a></li>
-        <li><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Danh Mục</a></li>
-        <li><a class="true" href="#"><i class="fa-regular fa-user"></i>  Tài khoản</a></li>
-        <li><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Nhóm Quyền</a></li>
+        <li sider__menu-item="sider__menu-item"><a href="javascript:;"><i class="fa-solid fa-cart-shopping"></i>  Sản Phẩm</a></li>
+        <div class="sider__menu-sub hidden">
+          <ul>
+            <li> <a href="products.html">Danh sách sản phẩm</a></li>
+            <li> <a href="product-add.html">Thêm sản phẩm</a></li>
+          </ul>
+        </div>
+        <li sider__menu-item="sider__menu-item"><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Danh Mục</a></li>
+        <div class="sider__menu-sub hidden">
+          <ul>
+            <li> <a href="#">Danh sách danh mục</a></li>
+            <li> <a href="#">Thêm danh mục</a></li>
+          </ul>
+        </div>
+        <li sider__menu-item="sider__menu-item"><a class="true" href="#"><i class="fa-regular fa-user"></i>  Tài khoản</a></li>
+        <div class="sider__menu-sub hidden">
+          <ul>
+            <li> <a href="#">Danh sách tài khoản</a></li>
+            <li> <a href="#">Thêm tài khoản</a></li>
+          </ul>
+        </div>
+        <li sider__menu-item="sider__menu-item"><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Nhóm Quyền</a></li>
+        <div class="sider__menu-sub hidden">
+          <ul>
+            <li> <a href="#">Danh sách nhóm quyền</a></li>
+            <li> <a href="#">Thêm nhóm quyền</a></li>
+            <li> <a href="#">Phân quyền</a></li>
+          </ul>
+        </div>
       </ul>
     </div>
     <div class="sider__menu">
       <div class="sider__menu-title">SETTING </div>
       <ul> 
-        <li><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Cài đặt </a></li>
+        <li sider__menu-item="sider__menu-item"><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Cài đặt </a></li>
+        <div class="sider__menu-sub hidden">
+          <ul>
+            <li> <a href="#">Cài đặt chung</a></li>
+            <li> <a href="#">Cài đặt nâng cao</a></li>
+          </ul>
+        </div>
       </ul>
     </div>
   </div>
