--- a/template/mixins/form.pug
+++ b/template/mixins/form.pug
@@ -1,3 +1,4 @@
+//- form tìm kiếm
 mixin form-search(keyword)
     form(
         action ="#" 
@@ -16,8 +17,9 @@ mixin form-search(keyword)
             class=""
         )
             i(class="fa-solid fa-magnifying-glass")
+//- hết form tìm kiếm
 
-
+//- form đổi trạng thái sản phẩm
 mixin form-change-status
     form(
         action="#"
@@ -25,3 +27,15 @@ mixin form-change-status
         method = "POST"
         form-change-status
     )
+//- hết form đổi trạng thái sản phẩm
+
+//- form xóa mềm sản phẩm
+mixin form-delete-soft  
+    form(
+        action="#"
+        class="hidden"
+        method="POST"
+        form-delete-soft
+    )
+//- hết form xóa mềm sản phẩm
+
