--- a/template/partials/sider.pug
+++ b/template/partials/sider.pug
@@ -4,36 +4,70 @@ nav(class="sider")
         div(class="sider__menu")
             div(class="sider__menu-title") MAIN HOME 
             ul
-                li 
-                    a(href="#" class="")
+                li(sider__menu-item)
+                    a(href="javascript:;" class="")
                         i(class="fa-brands fa-windows")
                         |   Dashboard
         //- page
         div(class="sider__menu")
             div(class="sider__menu-title") ALL PAGE 
             ul 
-                li
-                    a(href="#" class)
+                li(sider__menu-item)
+                    a(href="javascript:;")
                         i(class="fa-solid fa-cart-shopping")
                         |   Sản Phẩm
+                div(class="sider__menu-sub hidden")
+                    ul(class="")
+                        li 
+                            a(href="products.html") Danh sách sản phẩm
+                        li 
+                            a(href="product-add.html") Thêm sản phẩm
                         
-                li
+                li(sider__menu-item)
                     a(href="#" class)
                         i(class="fa-solid fa-layer-group")
                         |   Danh Mục
-                li
+                div(class="sider__menu-sub hidden")
+                    ul(class="")
+                        li 
+                            a(href="#") Danh sách danh mục
+                        li 
+                            a(href="#") Thêm danh mục
+                
+                li(sider__menu-item)
                     a(href="#" class)
                         i(class="fa-regular fa-user")
                         |   Tài khoản
-                li
+                div(class="sider__menu-sub hidden")
+                    ul(class="")
+                        li 
+                            a(href="#") Danh sách tài khoản
+                        li 
+                            a(href="#") Thêm tài khoản
+                
+                li(sider__menu-item)
                     a(href="#" class)
                         i(class="fa-solid fa-user-plus")
                         |   Nhóm Quyền
+                div(class="sider__menu-sub hidden")
+                    ul(class="")
+                        li 
+                            a(href="#") Danh sách nhóm quyền
+                        li 
+                            a(href="#") Thêm nhóm quyền
+                        li 
+                            a(href="#") Phân quyền
         //- setting
         div(class="sider__menu")
             div(class="sider__menu-title") SETTING 
             ul 
-                li
+                li(sider__menu-item)
                     a(href="#" class)
                         i(class="fa-solid fa-gear")
                         |   Cài đặt 
+                div(class="sider__menu-sub hidden")
+                    ul(class="")
+                        li 
+                            a(href="#") Cài đặt chung
+                        li 
+                            a(href="#") Cài đặt nâng cao
