--- a/template/products.pug
+++ b/template/products.pug
@@ -180,8 +180,21 @@ block main
                                         button-status-id = item.id
                                         button-status = "inactive"
                                     ) Dừng hoạt động
-                            td 
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            td
+                                div(class="table__option-icon")
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    div(class="table__option-tab hidden")
+                                        ul 
+                                            li 
+                                                a(href="#") Chỉnh Sửa
+                                            li 
+                                                a(href="#") Xem Chi Tiết
+                                            li 
+                                                a(
+                                                    href="javascript:;"
+                                                    button-delete-soft=item.id
+                                                ) Xóa
+
                     //- end table
         
         div(class="card__footer")
@@ -191,6 +204,9 @@ block main
 
         //- form đổi trạng thái item
         +form-change-status 
+
+        //- form xóa mềm sản phẩm
+        +form-delete-soft
         
     //- end card 
 
