--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -561,7 +561,7 @@ body {
         align-items: center;
         justify-content: space-between;
         gap: 30px;
-        width: 500px;
+        width: 70%;
     }
 
     &__footer {
@@ -724,7 +724,7 @@ body {
         flex: 1;
         // width: 500px;
         // width: 50%;
-        padding: 10px 22px;
+        padding: 10px;
         border: 1px solid $color-text-light;
         border-radius: 8px;
         overflow: hidden;
@@ -957,3 +957,37 @@ body {
     }
 }
 // end sort option
+
+// select 
+.select {
+    width: 35%;
+
+    &__sort {
+        -webkit-appearance: none;  /* For Safari & Chrome */
+        -moz-appearance: none;     /* For Firefox */
+        appearance: none;          /* For other browsers */
+        background-color: transparent;
+        border: 1px solid $color-text-light;
+        border-radius: 8px;
+        color: $color-text-light;
+        font-size: 14px;
+
+        width: 100%;
+        padding: 13px 8px;
+        cursor: pointer;
+
+        option {
+            color: $color-text-light;  /* Text color */
+            background-color: #324055;  /* Background color */
+            
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
+        &:focus {
+            outline: transparent;
+        }
+    }
+}
+// end select 
