--- a/template/products.pug
+++ b/template/products.pug
@@ -36,7 +36,8 @@ block main
                 img:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&s",
                 price:"1,452.500",
                 status:"active",
-                stock: 50
+                stock: 50,
+                position: 2
             },
             {
                 id: "65e9ad24841aed5173b59dd4",
@@ -45,7 +46,8 @@ block main
                 img:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&s",
                 price:"1,452.500",
                 status:"active",
-                stock: 50
+                stock: 50,
+                position: 1
             },
             {
                 id: "65e9ad24841aed5173b59dd5",
@@ -54,7 +56,8 @@ block main
                 img:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKdEUA91tfYGjoTgBW-vRTz6mynjBNgu-tMA&s",
                 price:"1,452.500",
                 status:"active",
-                stock: 50
+                stock: 50,
+                position: 3
             },
             {
                 id: "65e9ad24841aed5173b59dd6",
@@ -63,7 +66,8 @@ block main
                 img:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlv9AxXdlrzKkbCJxBFiJJdOE7UcwevFAuw&s",
                 price:"666.99",
                 status:"inactive",
-                stock: 0
+                stock: 0,
+                position: 5
             },
             {
                 id: "65e9ad24841aed5173b59dda",
@@ -72,7 +76,8 @@ block main
                 img:"https://bizweb.dktcdn.net/thumb/large/100/197/269/products/83eab7a387b88b9209f41000e6735c02.jpg?v=1703572315407",
                 price:"666.99",
                 status:"inactive",
-                stock: 0
+                stock: 0,
+                position: 10
             }
         ]
     
@@ -136,10 +141,11 @@ block main
                                 type = "checkbox"
                                 name=""
                                 class="checkbox-tick"
+                                check-box-all
                             )
                         th Sản Phẩm 
                         th Danh Mục
-                        th Số Lượng
+                        th Số lượng
                         th Giá
                         th Trạng Thái
                         th 
@@ -152,6 +158,7 @@ block main
                                     type = "checkbox"
                                     name=""
                                     class="checkbox-tick"
+                                    check-box-single = item.id
                                 )
                             td(class="table__title")
                                 img(
